# nyt_xword_downloader

./: .gitignore  Cargo.toml  README.md  artifacts.json  changelog.rss  dist-workspace.toml  index.html  nyt_xword_downloader-installer.ps1.txt  nyt_xword_downloader-installer.sh.txt  oranda.json
artifacts/: index.html
changelog/: index.html
changelog/v0.1.4/: index.html
changelog/v0.1.5/: index.html
src/: args.rs  date_utils.rs  fetch.rs  main.rs
