[package]
name = "nyt_xword_downloader"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/FreeMasen/nyt_xword_downloader"
description = "A utility for bulk downloading the NYT X-Word PDFs"
authors = ["Robert Masen <r.f.masen@gmail.com>"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
humantime = "2.2.0"
reqwest = { version = "0.12.15", features = ["rustls-tls-native-roots"] }
rookie = "0.5.6"
time = { version = "0.3.37", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.42.0", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
